# ros2_d2xx

./: CMakeLists.txt  README.md  package.xml
DE0/: DE0_top.qpf  DE0_top.qsf  DE0_top.qws  DE0_top.sdc  DE0_top_assignment_defaults.qdf
DE0/demo/: DE0_top_lsa.sof  configure.bat
DE0/ip/: DE0_top.v  DE0_top.v.bak  VirtualJTAG.qip  VirtualJTAG.v  VirtualJTAG.v.bak  seg7_ctrl.sflp  seg7_ctrl.v  sys_reset.v  vjtag_test.sflp  vjtag_test.v  vjtag_test.v.bak  vjtag_uart.h  vjtag_uart.v  vjtag_uart.v.bak  vjtag_uart.vh  vjtag_uart.vh.bak
DE0/output_files/: DE0_top.asm.rpt  DE0_top.cdf  DE0_top.done  DE0_top.fit.rpt  DE0_top.fit.summary  DE0_top.flow.rpt  DE0_top.jdi  DE0_top.map.rpt  DE0_top.map.smsg  DE0_top.map.summary  DE0_top.pin  DE0_top.sof  DE0_top.sta.rpt  DE0_top.sta.summary  stp1.stp  stp1_auto_stripped.stp
src/: pub_sub.cpp
