<?xml version="1.0"?>
<package format="3">
	<name>ros2_d2xx</name>
	<version>0.0.0</version>
	<description>Example package with ROS 2 and USB communication</description>
	<maintainer email="your_email@example.com">Your Name</maintainer>
	<license>TODO: License declaration</license>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<build_depend>rclcpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<exec_depend>rclcpp</exec_depend>
	<exec_depend>std_msgs</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
